--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -29,14 +29,15 @@ a {
 .MuiCheckbox-root .Mui-checked{
   color: #3b3b3b;
 }
-.MuiTooltip-tooltipPlacementTop{
+.MuiTooltip-tooltipPlacementTop ,.MuiTooltip-tooltipPlacementLeft, .MuiTooltip-tooltipPlacementRight{
   color: #fff;
   font-size: 12px;
   background-color: #3b3b3b;
   border-radius: 0;
-  padding: 8px 12px;
+  padding: 12px 12px;
   
 }
+
 .MuiFormControlLabel-label{
    font-family: 'Poppins';
    font-size: 14px;
